contrib/tree-sitter-parsley/grammar.js
    source_file: ($) => repeat($._statement),

    // ================================================================
    // Statements — parser.go L292-370 (parseStatement)
    // ================================================================

    _statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.dict_destructuring_assignment,
        $.export_statement,
        $.return_statement,
        $.check_statement,
        $.expression_statement,
      ),

    // parser.go L499-669 (parseLetStatement)
    // Forms: let x = expr, let {a,b} = expr, let [a,b] = expr
    // Also: let x <== expr, let x <=/= expr
    let_statement: ($) =>
      seq(
        choice("let", "var"),
        field("pattern", $._pattern),
        field("operator", choice("=", "<==", "<=/=")),
        field("value", $._expression),
      ),

    // parser.go L673-730 (parseAssignmentStatement)
    // Forms: x = expr, obj.name = expr, arr[0] = expr
    // Also: x <== expr, x <=/= expr
    expression_statement: ($) => $._expression,

    // ================================================================
    // Expressions — parser.go L957-1012 (parseExpression)
    // ================================================================

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.prefix_expression,
        $.read_expression,
        $.fetch_expression,
        $.infix_expression,
        $.not_in_expression,
        $.is_expression,
        $.write_expression,
        $.call_expression,
        $.index_expression,
        $.slice_expression,
        $.member_expression,
        $.function_expression,
        $.if_expression,
        $.for_expression,
        $.try_expression,
        $.import_expression,
        $.tag_expression,
        $.parenthesized_expression,
        $.block,
        $.schema_declaration,
        $.table_expression,
        $.query_expression,
        $.mutation_expression,
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(field("function", $._expression), field("arguments", $.arguments)),
      ),

    arguments: ($) => seq("(", commaSep($._expression), ")"),

    // parser.go L2579-2613 (parseIndexOrSliceExpression)
    member_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          ".",
          field("property", choice($.identifier, alias("as", $.identifier))),
        ),
      ),

    // ================================================================
    // Functions and blocks — parser.go L2286-2385
    // ================================================================

    // parser.go L2286-2301 (parseBlockStatement)
    function_expression: ($) =>
      seq(
        choice("fn", "function"),
        optional(field("parameters", $.parameter_list)),
        field("body", $.block),
      ),

    // parser.go L2330-2360 (parseFunctionParametersNew)
    parameter_list: ($) =>
      seq(
        "(",
        commaSep(
          choice(
            $.identifier,
            $._default_param,
            $._rest_param,
            $.array_pattern,
            $.dictionary_pattern,
          ),
        ),
        ")",
      ),

    // parser.go L2363-2385 (parseFunctionParameter — default value)
    _default_param: ($) =>
      seq(field("name", $.identifier), "=", field("default", $._expression)),

    // parser.go L2363-2385 (parseFunctionParameter — rest)
    _rest_param: ($) => seq("...", field("name", $.identifier)),

    // ================================================================
    // Control flow — parser.go L2171-2496
    // ================================================================

    // parser.go L2171-2284 (parseIfExpression)
    // Two forms:
    //   With parens: if (cond) consequence [else alternative]
    //     consequence can be block or single expression/statement
    //   Without parens: if cond { body } [else ...]
    //     consequence must be a block
    import_expression: ($) =>
      prec.right(
        seq(
          "import",
          field("source", $._expression),
          optional(seq("as", field("alias", $.identifier))),
        ),
      ),

    // ================================================================
    // Tags — parser.go L1354-1528
    // ================================================================

    // parser.go L1354-1365 (parseTagLiteral), L1367-1528 (parseTagPair, parseTagContents)
    // Tag content is repeat(_statement) — full Parsley code, NOT text with interpolation
    // Exception: <style> and <script> tags use raw text mode with @{} interpolation
    _pattern: ($) =>
      choice(
        $.identifier,
        $.array_pattern,
        $.dictionary_pattern,
        alias("_", $.identifier),
      ),

    // parser.go L3193-3250 (parseArrayDestructuringPattern)
    dictionary_pattern: ($) =>
      seq(
        "{",
        commaSep(
          choice(
            // key: nested_pattern
            seq(field("key", $.identifier), ":", field("value", $._pattern)),
            // key as alias
            seq(field("key", $.identifier), "as", field("alias", $.identifier)),
            // simple key (shorthand)
            $.identifier,
            // rest: ...identifier
            seq("...", optional($.identifier)),
          ),
        ),
        "}",
      ),

    // ================================================================
    // Schema declarations — parser.go L3253-3410 (Phase 2 basic support)
    // ================================================================

    // parser.go L3253-3293 (parseSchemaDeclaration)
    number: ($) => /\d+(\.\d+)?/,

    // -------------------- Booleans --------------------
    // parser.go L1834-1836 — true/false are keywords
    // NOTE: null is NOT a keyword — it's an identifier that the evaluator special-cases
    boolean: ($) => choice("true", "false"),

    // -------------------- Strings --------------------
    // lexer.go L1570-1600 (readString) — double-quoted, NO interpolation
    // Note: Only template strings (backticks) and raw strings (single quotes with @{}) support interpolation
    string: ($) =>
      seq('"', repeat(choice($.escape_sequence, $._string_content)), '"'),

    // Higher precedence than TAG (12) to prevent <tag> inside strings from being tokenized as tag_start
    // Includes { since double-quoted strings don't have interpolation
    _string_content: ($) => token.immediate(prec(PREC.TAG + 2, /[^"\\]+/)),

    // lexer.go L1642-1664 (readTemplate) — backtick strings with {expr} interpolation
    template_string: ($) =>
      seq(
        "`",
        repeat(choice($.escape_sequence, $.interpolation, $._template_content)),
        "`",
      ),

    // Higher precedence than TAG (12) to prevent <tag> inside strings from being tokenized as tag_start
    _template_content: ($) => token.immediate(prec(PREC.TAG + 2, /[^`\\{]+/)),

    // lexer.go L1605-1639 (readRawString) — single-quoted, with @{expr} interpolation
    raw_string: ($) =>
      seq(
        "'",
        repeat(
          choice($.escape_sequence, $.raw_interpolation, $._raw_string_content),
        ),
        "'",
      ),

    // Higher precedence than TAG (12) to prevent <tag> inside strings from being tokenized as tag_start
    _raw_string_content: ($) =>
      token.immediate(prec(PREC.TAG + 2, /([^'\\@]|@[^{'])+/)),

    // Shared string internals
    escape_sequence: ($) => token.immediate(prec(1, /\\./)),

    interpolation: ($) => seq(token.immediate("{"), $._expression, "}"),

    raw_interpolation: ($) =>
      seq(token.immediate(seq("@", "{")), $._expression, "}"),

    // -------------------- Regex --------------------
    // lexer.go L2293-2327 (readRegex), shouldTreatAsRegex L2879-2896
    // Regex only valid in prefix position (where division isn't expected)
    regex: ($) =>
      token(seq("/", /[^/\n*][^/\n]*/, "/", optional(/[gimsuvy]+/))),

    // -------------------- Money --------------------
    // lexer.go L1275-1565 (readMoneyLiteral, isCurrencyCodeStart, isCompoundCurrencySymbol)
    money: ($) =>
      token(
        seq(
          choice(
            /[$\u00A3\u20AC\u00A5]/, // $ £ € ¥
            /[A-Z]{1,2}[$\u00A3\u20AC\u00A5]/, // CA$ AU$ HK$ S$ CN¥
            /[A-Z]{3}#/, // USD# GBP# EUR# etc.
          ),
          /\d+(\.\d{1,2})?/,
        ),
      ),

    // -------------------- @-literals --------------------
    // lexer.go L2474-2655 (detectAtLiteralType)
    datetime_literal: ($) =>
      token(
        prec(
          2,
          seq(
            "@",
            choice(
              // Full date or datetime
              seq(
                /\d{4}-\d{2}-\d{2}/,
                optional(
                  seq(
                    "T",
                    /\d{2}:\d{2}/,
                    optional(seq(":", /\d{2}/)),
                    optional(/(\.\d+)?(Z|[+-]\d{2}:\d{2})?/),
                  ),
                ),
              ),
              // Time only: HH:MM or HH:MM:SS
              seq(/\d{1,2}:\d{2}/, optional(seq(":", /\d{2}/))),
            ),
          ),
        ),
      ),

    // @now, @today, @timeNow, @dateNow
    // lexer.go detectAtLiteralType — keyword checks
    time_now_literal: ($) =>
      token(prec(3, seq("@", choice("now", "today", "timeNow", "dateNow")))),

    // @2h30m, @-7d, @1y6mo
    // lexer.go L2427-2465 (readDurationLiteral)
    duration_literal: ($) =>
      token(prec(4, seq("@", /-?\d+[yMwdhms]([0-9yMwdhms]|mo)*/))),

    // @sqlite, @postgres, @mysql, @sftp, @shell, @DB
    // lexer.go detectAtLiteralType — connection keywords
    connection_literal: ($) =>
      token(
        prec(
          3,
          seq(
            "@",
            choice("sqlite", "postgres", "mysql", "sftp", "shell", "DB"),
          ),
        ),
      ),

    // @SEARCH, @env, @args, @params
    // lexer.go detectAtLiteralType — builtin globals / context
    context_literal: ($) =>
      token(prec(3, seq("@", choice("SEARCH", "env", "args", "params")))),

    // @std/math, @basil/http, @basil/auth, @std, @basil
    // lexer.go L2787-2802 (readStdlibPath)
    stdlib_import: ($) =>
      token(
        prec(
          3,
          seq(
            "@",
            choice("std", "basil"),
            optional(seq("/", /[a-zA-Z][a-zA-Z0-9_]*/)),
          ),
        ),
      ),

    // @-, @stdin, @stdout, @stderr
    // lexer.go readPathLiteral — stdio detection
    stdio_literal: ($) =>
      token(prec(3, seq("@", choice("-", "stdin", "stdout", "stderr")))),

    // @./file, @../dir, @/usr/local, @~/home, @.config
    // lexer.go L2715-2782 (readPathLiteral)
    path_literal: ($) =>
      token(
        prec(
          1,
          seq(
            "@",
            choice(
              seq(".", /[./]?/, /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("/", /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("~/", /[^\s<>"{}|\\^`\[\]),:;]*/),
            ),
          ),
        ),
      ),

    // @https://example.com, @http://..., @ftp://...
    // lexer.go L2841-2874 (readUrlLiteral)
    url_literal: ($) =>
      token(
        prec(
          2,
          seq("@", /(https?|ftp|file|wss?|ssh):\/\/[^\s<>"{}|\\^`\[\]),;]*/),
        ),
      ),

    // @(./path/{expr}), @(./{name}/file)
    // lexer.go L2972-3017 (readPathTemplate)
    path_template: ($) =>
      seq("@(", repeat(choice(/[^{}()]+/, seq("{", $._expression, "}"))), ")"),

    // url_template and datetime_template use the same @(...) syntax
    // but are semantically distinct. Since tree-sitter alias causes conflicts,
    // we fold them into path_template and distinguish in highlights.scm.
    // The _at_literal choice only includes path_template.

    // ================================================================
    // Collections — parser.go L2139-2169, L2988-3079
    // ================================================================

    // parser.go L2139-2169 (parseSquareBracketArrayLiteral)
    // No spread in arrays — parser just calls parseExpression for each element
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // lexer.go collectTrivia, skipAndCaptureComment
