contrib/tree-sitter-parsley/test/corpus/literals.txt
==================
Integer literal
==================

42

---

(source_file
  (expression_statement
    (number)))

==================
Float literal
==================

3.14

---

(source_file
  (expression_statement
    (number)))

==================
Boolean true
==================

true

---

(source_file
  (expression_statement
    (boolean)))

==================
Boolean false
==================

false

---

(source_file
  (expression_statement
    (boolean)))

==================
Null is an identifier
==================

null

---

(source_file
  (expression_statement
    (identifier)))

==================
Simple string
==================

"hello world"

---

(source_file
  (expression_statement
    (string)))

==================
String with escape sequence
==================

"hello\nworld"

---

(source_file
  (expression_statement
    (string
      (escape_sequence))))

==================
String with braces (literal, no interpolation)
==================

"hello {name}"

---

(source_file
  (expression_statement
    (string)))

==================
String with JSON content
==================

"{\"name\":\"Alice\"}"

---

(source_file
  (expression_statement
    (string
      (escape_sequence)
      (escape_sequence)
      (escape_sequence)
      (escape_sequence))))

==================
Template string
==================

`hello {name}`

---

(source_file
  (expression_statement
    (template_string
      (interpolation
        (identifier)))))

==================
Raw string no interpolation
==================

'hello world'

---

(source_file
  (expression_statement
    (raw_string)))

==================
Raw string with @{} interpolation
==================

'hello @{name}'

---

(source_file
  (expression_statement
    (raw_string
      (raw_interpolation
        (identifier)))))

==================
Regex literal
==================

/pattern/

---

(source_file
  (expression_statement
    (regex)))

==================
Regex with flags
==================

/pattern/gi

---

(source_file
  (expression_statement
    (regex)))

==================
Money dollar
==================

$100

---

(source_file
  (expression_statement
    (money)))

==================
Money with decimals
==================

$50.99

---

(source_file
  (expression_statement
    (money)))

==================
Money currency code
==================

USD#100.00

---

(source_file
  (expression_statement
    (money)))

==================
Unit literal — simple
==================

#100kg

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — float
==================

#3.5m

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — negative
==================

#-6m

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — fraction
==================

#3/8in

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — mixed fraction
==================

#92+5/8in

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — digital binary
==================

#1KiB

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — area
==================

#100mm2

---

(source_file
  (expression_statement
    (unit)))

==================
Unit literal — temperature
==================

#72F

---

(source_file
  (expression_statement
    (unit)))
